--- a/PuntoVenta/PuntoVenta.csproj
+++ b/PuntoVenta/PuntoVenta.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MatBlazor" Version="2.7.0" />
+    <PackageReference Include="Microsoft.EntityframeworkCore" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityframeworkCore.Sqlite" Version="5.0.0" />
+    <PackageReference Include="Microsoft.EntityframeworkCore.tools" Version="5.0.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
