Se modificaron los servicios y se empezo el diseño

--- a/PuntoVenta/appsettings.json
+++ b/PuntoVenta/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Data/punto_venta.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
