--- a/PuntoVenta/PuntoVenta.csproj
+++ b/PuntoVenta/PuntoVenta.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Toast" Version="3.1.2" />
     <PackageReference Include="MatBlazor" Version="2.7.0" />
     <PackageReference Include="Microsoft.EntityframeworkCore" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityframeworkCore.Sqlite" Version="5.0.0" />
